<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iVLogoBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_logo" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:tabTextColor="@color/colorTextPrimary">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabRecargas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_recargas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabRecaudacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_recaudacion" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAdministracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_administracion" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>