<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llRecarga"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="enterAlways|snapMargins"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/recargas_caps"
        app:titleMargin="12dp"
        app:titleTextColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLogoRecarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:drawablePadding="16dp"
            android:gravity="center_horizontal"
            android:text="@string/hint_tipo_recarga"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:drawableTopCompat="@drawable/ic_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNumeroCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLogoRecarga"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/num_cel"
            android:textColorHint="@color/colorTextPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:counterTextColor="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNumCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="number"
                android:maxEms="10"
                android:maxLines="1"
                android:textColor="@color/colorTextPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMontoRecarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilNumeroCelular"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/monto_recarga"
            android:textColorHint="@color/colorTextPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:counterTextColor="@android:color/white"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/ic_money"
            app:startIconTint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMontoRecarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:inputType="numberDecimal"
                android:maxEms="6"
                android:maxLines="1"
                android:textColor="@color/colorTextPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvAvisoComision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilMontoRecarga"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="@string/hint_comision_recarga"
            android:textAllCaps="true"
            android:textColor="@color/colorTextSecundary" />

        <Button
            android:id="@+id/btnContinuarRecarga"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAvisoComision"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="8dp"
            android:text="@string/continuar_recarga"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</LinearLayout>