<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_shape_dialog"
    android:foreground="@drawable/rounded_shape_dialog"
    android:padding="25dp"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="16dp"
    app:cardElevation="7dp"
    app:cardPreventCornerOverlap="true">

    <RelativeLayout
        android:id="@+id/rlDialogRecarga"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/tvIdUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/hint_id_user"
                android:textColor="@color/colorTextPrimary"
                app:drawableStartCompat="@drawable/ic_user" />

            <TextView
                android:id="@+id/tvHora"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/hint_hora"
                android:textColor="@color/colorTextPrimary"
                app:drawableStartCompat="@drawable/ic_clock" />

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/hint_fecha"
                android:textColor="@color/colorTextPrimary"
                app:drawableStartCompat="@drawable/ic_date" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvAvisoRecarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llDialog"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="8dp"
            android:drawablePadding="8dp"
            android:text="@string/hint_aviso_recarga"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableBottomCompat="@drawable/ic_logo" />

        <LinearLayout
            android:id="@+id/llNumTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAvisoRecarga"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/hint_numero_telefonico"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tvNumTelefonico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/hint_numero_telefonico"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMontoRecarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llNumTel"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/monto_recarga"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tvMontoRecarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/monto_recarga"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvAvisoDialogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llMontoRecarga"
            android:layout_centerInParent="true"
            android:layout_marginVertical="8dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/hint_aviso_pago_oportuno"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAvisoDialogo"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancelar"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnAceptar"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:text="@string/aceptar"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlRecargaExitosa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvRecargaExitosa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="8dp"
            android:drawablePadding="25dp"
            android:text="@string/hint_recarga_exitosa"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableBottomCompat="@drawable/ic_done" />

        <Button
            android:id="@+id/btnAceptarCerrar"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRecargaExitosa"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:text="@string/aceptar"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlProcesando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvProcesando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="8dp"
            android:drawablePadding="25dp"
            android:text="@string/hint_procesando_recarga"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableBottomCompat="@drawable/ic_logo" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>