<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header_element1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/tvNombreRecycler1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/hint_elemento1"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tvVerMas1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:layout_toEndOf="@id/tvNombreRecycler1"
                android:layout_toRightOf="@id/tvNombreRecycler1"
                android:gravity="end"
                android:text="@string/hint_ver_mas"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvClaro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_element1"
            android:layout_margin="4dp" />

        <RelativeLayout
            android:id="@+id/header_element2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvClaro">

            <TextView
                android:id="@+id/tvNombreRecycler2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/hint_elemento2"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tvVerMas2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:layout_toEndOf="@id/tvNombreRecycler2"
                android:layout_toRightOf="@id/tvNombreRecycler2"
                android:gravity="end"
                android:text="@string/hint_ver_mas"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTuenti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_element2" />

        <RelativeLayout
            android:id="@+id/header_element3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvTuenti">

            <TextView
                android:id="@+id/tvNombreRecycler3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/hint_elemento3"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tvVerMas3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:layout_toEndOf="@id/tvNombreRecycler3"
                android:layout_toRightOf="@id/tvNombreRecycler3"
                android:gravity="end"
                android:text="@string/hint_ver_mas"
                android:textAllCaps="true"
                android:textColor="@color/colorTextPrimary" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEntel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_element3" />
    </RelativeLayout>
</ScrollView>