<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:id="@+id/rlLoginFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:animateLayoutChanges="true"
        android:isScrollContainer="true">

        <TextView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            app:drawableTopCompat="@drawable/ic_logo" />

        <LinearLayout
            android:id="@+id/llAllAnim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivLogo"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLUserLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/hint_user"
                android:textColorHint="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="60"
                app:counterOverflowTextColor="@android:color/white"
                app:counterTextColor="@android:color/white"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789qwertyuiopñlkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNM_.-@"
                    android:drawableStart="@drawable/ic_user"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="8dp"
                    android:inputType="textEmailAddress|textAutoComplete"
                    android:maxLength="60"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/hint_pass"
                android:textColorHint="@android:color/white"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:hintTextColor="@android:color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawableLeft="@drawable/ic_pass"
                    android:drawablePadding="8dp"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLoginEmail"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:text="@string/iniciar_sesion"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llAllAnim"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:paddingTop="50dp"
            android:text="v2.0"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

</ScrollView>